[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yooztech_mcp_api_request"
version = "0.0.1"
description = "MCP server template for generic API requests"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "yooztech" }]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.2",
]

[project.scripts]
yooztech_mcp_api_request = "app:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["app"]
